# CalHacks

./: .gitignore  FIX_TOKEN_ERROR.md  QUICKSTART.md  README.md  RUN.md  START.md  TEST.md  TIKTOK_WORKFLOW.md  TRIGGER_FIX.md
agent/: README.md  ai_navigator.py  command_sender.py  config.py  main.py  mcp_client.py  pyproject.toml  requirements.txt  scroll_handler.py  test_connection.py  video_analyzer.py
extension/: manifest.json  package.json  test-connection.js  test-token.js  token-server.js  webpack.config.js
extension/background/: background.js
extension/content/: content.js
extension/offscreen/: offscreen.html  offscreen.js
extension/popup/: popup.css  popup.html  popup.js
mcp-config/: README.md
